<resources>
    <string name="app_name">Home Workout</string>
    <string name="slogan">Commit to be fit ...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_info">Application Information</string>
    <string name="app_info">\n\tWe want to help you live a fit and healthy lifestyle! We do this by providing you many such workouts. We believe that building a positive culture is incredibly important. \n\n\tWe work hard to ensure we have strong relationships with our customers, bringing you the best possible workouts. We are an ambitious company and we’re always looking for great people to join our team. \n\n\tWe combine different types of fitness exercises to meet different fitness needs and levels. Our awesome team is always keen to help, so please call us to discuss your needs.\n</string>
    <string name="about_team">Contributors</string>
    <string name="contribution">\tGaikwad Dipak\n\tHambir Akshay\n\tGandhi Kalpesh\n\tChavhan Shantanu\n</string>
    <string name="Workout">Workout</string>
    <string name="Timer">Stop Watch</string>
    <string name="wieght_loss_workout">Wieght Loss Workout</string>
    <string name="full_body_workout">Full Body Workout</string>
    <string name="lower_body_workout">Lower Body Workout</string>
    <string name="chest_beginner">Chest Workout For Beginner</string>
    <string name="chest_intermediate">Chest Workout For Intermediate</string>
    <string name="chest_advance">Chest Workout For Advance</string>
    <string name="abs_beginner">ABS Workout For Beginner</string>
    <string name="abs_intermediate">ABS Workout For Intermediate</string>
    <string name="abs_advance">ABS Workout For Advance</string>
    <string name="arm_beginner">Arm Workout For Beginner</string>
    <string name="arm_intermediate">Arm Workout For Intermediate</string>
    <string name="arm_advance">Arm Workout For Advance</string>
    <string name="shoulder_and_back_beginner">Shoulder And Back Workout For Beginner</string>
    <string name="shoulder_and_back_intermediate">Shoulder And Back Workout For Intermediate</string>
    <string name="shoulder_and_back_advance">Shoulder And Back Workout For Advance</string>
    <string name="leg_beginner">Leg Workout For Beginner</string>
    <string name="leg_intermediate">Leg Workout For Intermediate</string>
    <string name="leg_advance">Leg Workout For Advance</string>
    <string name="abdominal_crunches">Abdominal Crunches</string>
    <string name="arm_scissors">Arm Scissors</string>
    <string name="backward_lunges">Backward Lunges</string>
    <string name="bicycle_crunches">Bicycle Crunches</string>
    <string name="burpees">Burpees</string>
    <string name="cobra_stretch">Cobra Stretch</string>
    <string name="forward_lunges">Forward Lunges</string>
    <string name="inchworms">Inchworms</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="jumping_squats">Jumping Squats</string>
    <string name="mountain_climbers">Mountain Climbers</string>
    <string name="push_ups">Push Ups</string>
    <string name="side_hop">Side Hop</string>
    <string name="skipping_without_rope">Skipping Without Rope</string>
    <string name="squats">Squats</string>
    <string name="incline_push_ups">Incline Push Ups</string>
    <string name="box_push_ups">Box Push Ups</string>
    <string name="knee_push_ups">Knee Push Ups</string>
    <string name="wide_arm_push_ups">Wide Arm Push Ups</string>
    <string name="chest_stertch">Chest Stertch</string>
    <string name="side_lying_leg_lift_left">Side Lying Leg Lift Left</string>
    <string name="side_lying_leg_lift_right">Side Lying Leg Lift Right</string>
    <string name="donkey_kicks_left">Donkey Kicks Left</string>
    <string name="donkey_kicks_right">Donkey Kicks Right</string>
    <string name="left_quad_stretch_with_wall">Left Quad Stretch With Wall</string>
    <string name="right_quad_stretch_with_wall">Right Quad Stretch With Wall</string>
    <string name="knee_to_chest_stretch_left">Knee To Chest Stretch Left</string>
    <string name="knee_to_chest_stretch_right">Knee To Chest Stretch Right</string>
    <string name="hindu_push_ups">Hindu Push Ups</string>
    <string name="staggered_push_ups">Staggered Push Ups</string>
    <string name="push_ups_and_rotation">Push Ups And Rotation</string>
    <string name="decline_push_ups">Decline Push Ups</string>
    <string name="spiderman_push_ups">Spiderman Push Ups</string>
    <string name="russian_twist">Russian Twist</string>
    <string name="heel_touch">Heel Touch</string>
    <string name="leg_raises">Leg Raises</string>
    <string name="plank">Plank</string>
    <string name="spine_lumber_twist_strech_left">Spine Lumber Twist Strech Left</string>
    <string name="spine_lumber_twist_strech_right">Spine Lumber Twist Strech Right</string>
    <string name="crossover_crunch">Crossover Crunch</string>
    <string name="side_bridges_left">Side Bridges Left</string>
    <string name="side_bridges_right">Side Bridges Right</string>
    <string name="butt_bridge">Butt Bridge</string>
    <string name="v_up">V-Up</string>
    <string name="side_plank_left">Side Plank Left</string>
    <string name="side_plank_right">Side Plank Right</string>
    <string name="sit_ups">Sit Ups</string>
    <string name="arm_raises">Arm Raises</string>
    <string name="side_arm_raises">Side Arm Raises</string>
    <string name="triceps_dips">Triceps Dips</string>
    <string name="arm_circles_clockwise">Arm Circles Clockwise</string>
    <string name="arm_circles_counter_clockwise">Arm Circles Counter Clockwise</string>
    <string name="diamond_push_ups">Diamond Push Ups</string>
    <string name="leg_barbell_curl_left">Leg Barbell Curl Left</string>
    <string name="leg_barbell_curl_right">Leg Barbell Curl Right</string>
    <string name="diagonal_plank">Diagonal Plank</string>
    <string name="wall_push_ups">Wall Push Ups</string>
    <string name="triceps_stretch_left">Triceps Stretch Left</string>
    <string name="triceps_stretch_right">Triceps Stretch Right</string>
    <string name="standing_biceps_stretch_left">Standing Biceps Stretch Left</string>
    <string name="standing_biceps_stretch_right">Standing Biceps Stretch Right</string>
    <string name="floor_triceps_dips">Floor Triceps Dips</string>
    <string name="military_push_ups">Military Push Ups</string>
    <string name="alternating_hooks">Alternating Hooks</string>
    <string name="arm_curl_crunch_left">Arm Curl Crunch Left</string>
    <string name="arm_curl_crunch_right">Arm Curl Crunch Right</string>
    <string name="shoulder_gators">Shoulder Gators</string>
    <string name="doorway_curls_left">Doorway Curls Left</string>
    <string name="doorway_curls_right">Doorway Curls Right</string>
    <string name="modified_push_ups_low_hold">Modified Push Ups Low Hold</string>
    <string name="rhomboid_pulls">Rhomboid Pulls</string>
    <string name="side_lying_floor_strerch_left">Side Lying Floor Strerch Left</string>
    <string name="side_lying_floor_strerch_right">Side Lying Floor Strerch Right</string>
    <string name="cat_cow_pose">Cat Cow Pose</string>
    <string name="reclined_rhomboid_squeezes">Reclined Rhomboid Squeezes</string>
    <string name="childs_pose">Childs Pose</string>
    <string name="triceps_kickbacks">Triceps Kickbacks</string>
    <string name="hip_hinge">Hip Hinge</string>
    <string name="hover_push_ups">Hover Push Ups</string>
    <string name="swimmer_and_superman">Swimmer And Superman</string>
    <string name="hyperextension">Hyperextension</string>
    <string name="pike_push_ups">Pike Push Ups</string>
    <string name="reverse_push_ups">Reverse Push Ups</string>
    <string name="supine_push_ups">Supine Push Ups</string>
    <string name="reverse_snow_angels">Reverse Snow Angels</string>
    <string name="wall_calf_raises">Wall Calf Raises</string>
    <string name="sumo_squat_calf_raises_with_wall">Sumo Squat Calf Raises With Wall</string>
    <string name="calf_stretch_left">Calf Stretch Left</string>
    <string name="calf_stretch_right">Calf Stretch Right</string>
    <string name="fire_hydrant_left">Fire Hydrant Left</string>
    <string name="fire_hydrant_right">Fire Hydrant Right</string>
    <string name="lunges">Lunges</string>
    <string name="side_leg_circles_left">Side Leg Circles Left</string>
    <string name="side_leg_circles_right">Side Leg Circles Right</string>
    <string name="sumo_squat">Sumo Squat</string>
    <string name="reverse_flutter_kicks">Reverse Flutter Kicks</string>
    <string name="wall_sit">Wall Sit</string>
    <string name="calf_raise_with_splayed_foot">Calf Raise With Splayed Foot</string>
    <string name="single_leg_calf_hop_left">Single Leg Calf Hop Left</string>
    <string name="single_leg_calf_hop_right">Single Leg Calf Hop Right</string>
    <string name="bottom_leg_lift_left">Bottom Leg Lift Left</string>
    <string name="bottom_leg_lift_right">Bottom Leg Lift Right</string>
    <string name="curtsy_lunges">Curtsy Lunges</string>
    <string name="glute_kick_back_left">Glute Kick Back Left</string>
    <string name="glute_kick_back_right">Glute Kick Back Right</string>
    <string name="lying_butterfly_stretch">Lying Butterfly Stretch</string>
    <string name="leaning_stretcher_raises">Leaning Stretcher Raises</string>
    <string name="wall_resisting_single_leg_calf_raise_left">Wall Resisting Single Leg Calf Raise Left</string>
    <string name="wall_resisting_single_leg_calf_raise_right">Wall Resisting Single Leg Calf Raise Right</string>
    <string name="abdominal_crunches_step">\n1.	Lie on your back with your knees bent and your arms stretched forward.\n2.	Then lift your upper body off the floor. Hold for a few seconds and slowly return. It primarily works the rectus abdomens muscle and the oblique.\n</string>
    <string name="arm_scissors_step">\n1.	Stand upright with your feet should wide apart.\n2.	Stretch your arms in front of you at shoulder height with one arm overlap the other in the shape of the letter ‘X’, and then spread them apart.\n3.	Switch arms, and repeat the exercise.\n</string>
    <string name="backward_lunges_step">\n1.	Stand tall with your hip distance apart.\n2.	Take a large step backward and lower your body toward the floor. Both legs should be bent at a 90-degree angle at the bottom of the lunge. Rise back to start and repeat.\n</string>
    <string name="bicycle_crunches_step">\n1.	Start on your back with your hands behind your head. Lift your right knee toward your chest with your left leg straight and lifted a few inches up.\n2.	Lift your upper body up. Draw your knee to the opposite elbow, alternating sides.\n</string>
    <string name="burpees_step">\n1.	Begin in a standing position. Sit into a squat and place your hands on ground outside your feet.\n2.	Kick both feet outside you and land in push up position, keep the hips up and core engage. Take the chest to the ground at the bottom of the push up. Press up from the bottom of push up and return feet to hands.\n3.	Return to standing by jumping off the ground, clapping hands overhead.\n</string>
    <string name="cobra_stretch_step">\n1.	To begin the pose lie flat on the floor with your belly facing down and place your hands underneath the shoulders.\n2.	Tense your legs, contract your thighs and press feet firmly into the floor.\n3.	Then push your chest up off the ground as far as possible.\n</string>
    <string name="forward_lunges_step">\n1.	Step forward with a leg and bend it until both legs are in a 90 degree angle.\n2.	Push through your front heel to activate your glutes and back to the starting position.\n</string>
</resources>