<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AboutUs"
    android:background="#F32C2C2C">

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/content_main"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:scrollbars="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="83dp"
        android:src="@drawable/icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/image"
        android:id="@+id/appname"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/appname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Application Name"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appname1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="@string/app_name"
            android:textColor="#888282"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/appname"
        android:id="@+id/appversion"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/appversion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Application Version"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appversion1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="v1.0.1"
            android:textColor="#888282"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/appversion"
        android:id="@+id/dbversion"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/dbversion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Database Version"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dbversion1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="Firebase v16.0.4"
            android:textColor="#888282"
            android:textSize="15dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/dbversion"
        android:id="@+id/storage"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/storage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Storage"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storage1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="34.10 MB"
            android:textColor="#888282"
            android:textSize="15dp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_below="@+id/storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/name_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/baloo"
                android:text="@string/about_info"
                android:textColor="#272626"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_arrow_info"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/name_info"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableview_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_margin="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/name_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_info"
                android:background="@drawable/textview_design">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/name_info"
                    android:background="@drawable/textview_design"
                    tools:ignore="NotSibling"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/app_info"
                    android:textColor="#888282"
                    android:textSize="15sp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/name_team"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/baloo"
                android:text="@string/about_team"
                android:textColor="#272626"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expandableview_info" />

            <Button
                android:id="@+id/button_arrow_team"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/name_team"
                app:layout_constraintTop_toBottomOf="@+id/expandableview_info"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableview_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_margin="12dp"
                android:paddingBottom="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_team"
                android:background="@drawable/textview_design">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/textview_design"
                    android:fontFamily="@font/baloo"
                    android:text="@string/contribution"
                    android:textColor="#888282"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_team"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/cardview_about"
        android:id="@+id/git"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/git1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Open Source URL"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/git2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/git1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="https://github.com/Dipak-Gaikwad/Fitness_App"
            android:textColor="#888282"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/git"
        android:id="@+id/contact"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/contact1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Contact Us"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact1"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/baloo"
            android:text="homeworkout@gmail.com"
            android:textColor="#888282"
            android:textColorLink="#888282"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/contact"
        android:background="@drawable/textview_design">
        <TextView
            android:id="@+id/service1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Rate on Google Play"
            android:textColor="#272626"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/service2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Send Feedback"
            android:textColor="#888282"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/service2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/baloo"
            android:text="Terms and Conditions"
            android:textColor="#272626"
            android:textSize="20dp" />
    </RelativeLayout>

</RelativeLayout>
</ScrollView>
</RelativeLayout>
